# dengo

./: README.md  bucket.tf  cloudfront.tf  keys.tf  lambda.tf  links.tf  moved.tf  oidc.tf  outputs.tf  providers.tf  variables.tf
.github/workflows/: publish.yml
data/: auth_redir.html  deploy.sh  gha-build.sh  gha-package.sh  gha-prep.sh  lambda_handler.py  link_edit.html  pyproject.toml
