[tool.poetry]
name = "dengo"
version = "0.0.1"
description = ""
authors = ["Ryan Moore <ryan.moore@lambdal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rsa = "> 4.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}

[tool.poetry.group.dev.dependencies]
boto3 = "*"
botocore = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
